--- a/src/chp10/ex4/Attendance.css
+++ b/src/chp10/ex4/Attendance.css
@@ -8,7 +8,7 @@
 
 .attendance-title {
     text-align: center;
-    color: #333;
+    color: black;
     margin-bottom: 30px;
 }
 
@@ -19,7 +19,7 @@
     gap: 20px;
 }
 
-.student-card {
+.money-card {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -28,28 +28,28 @@
     transition: transform 0.3s ease;
 }
 
-.student-card:hover {
+.money-card:hover {
     transform: translateY(-5px);
 }
 
-.student-avatar {
+.money-avatar {
     width: 100%;
     height: 200px;
     object-fit: contain;
 }
 
-.student-info {
+.money-info {
     padding: 15px;
 }
 
 
-.student-info h3 {
+.money-info h3 {
     margin: 0;
     color: #333;
     font-size: 1.2em;
 }
 
-.student-info p {
+.money-info p {
     margin: 5px 0 0;
     color: #666;
     font-size: 0.9em;
